--- a/index.html
+++ b/index.html
@@ -687,16 +687,16 @@
                     <fieldset>
     
                     <div class="form-field">
-                        <input name="contactName" type="text" id="contactName" placeholder="Your Name" value="" minlength="2" required="" aria-required="true" class="full-width">
+                        <input name="contactName" type="text" id="contactName" placeholder="Nombre" value="" minlength="2" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
-                        <input name="contactEmail" type="email" id="contactEmail" placeholder="Your Email" value="" required="" aria-required="true" class="full-width">
+                        <input name="contactEmail" type="email" id="contactEmail" placeholder="Correo" value="" required="" aria-required="true" class="full-width">
                     </div>
                     <div class="form-field">
-                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Subject" value="" class="full-width">
+                        <input name="contactSubject" type="text" id="contactSubject" placeholder="Proyecto" value="" class="full-width">
                     </div>
                     <div class="form-field">
-                        <textarea name="contactMessage" id="contactMessage" placeholder="Your Message" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
+                        <textarea name="contactMessage" id="contactMessage" placeholder="Mensaje" rows="10" cols="50" required="" aria-required="true" class="full-width"></textarea>
                     </div>
                     <div class="form-field">
                         <button class="full-width btn--primary">Enviar</button>
@@ -752,10 +752,6 @@
                                 </li>
                                 <li>
                                     <a href="https://medium.com/@jaztanguzman"><i class="fa fa-medium" aria-hidden="true"></i>  <span>Medium</span></a>
-                                </li>
-                               
-                                <li>
-                                    <a href="https://twitter.com/jaztanguzman"><i class="fa fa-twitter" aria-hidden="true"></i>  <span>Twiiter</span></a>
                                 </li>
                     </ul> <!-- end contact-social -->
 
