--- a/index.html
+++ b/index.html
@@ -340,13 +340,14 @@
                                     <p> 
                                             <ul>
                                              <li style="color:red;">El Problema:<br>
-                                                Telmobi desea agilizar la atención que se le brinda a sus clientes, <br>
-                                                 al momento de reportar una falla en su conexion a internet.<br>
+                                                El Banco  más importante de México, <br>
+                                                lanzo su segunda aplicación movil<br>>
+                                                resentan un incremento en los usuarios que desinstalan la apliación.<br>
                                   
                                               <li style="color:green;"> La Solución:<br>
-                                               Al momento de tener una falla de conexión en su computadora recibiran,<br>
-                                              una guia paso a paso de como podrán generar su reporte,<br>
-                                              el mismo que podrán realizar desde facebook.
+                                               Se detectla razón por la que desinstalaban la aplicación,<br>
+                                              la apliación habia sido diseñada para IOS,y no especificaban que era una aplicación exclusica de un banco<br>
+                                              Se rediseño landing page y se validaron los datos obtenidos por lo que se notifico a los usuarios el proximo lanzamiento para telefonos android
                                             </li>
                                            </ul>   
                                             </p>
@@ -733,7 +734,7 @@
                     <div class="cinfo">
                         <p>
                                 <a href="mailto:jaztangr@outlook.com?Subject=Me gustaría%20agendar%20una%20cita"
-                                > Enviar Correo</a>
+                                > jaztangr@outlook.com</a>
                         </p>
                     </div>
 
