--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
 
             <div class="col-twelve">
                 <div class="copyright">
-                    <span>© Copyright Jazmin 2019</span> 
+                    <span>© Copyright Jazmin Tania Reyes Guzmán 2019</span> 
                     	
                 </div>
 
