agregacion de cv

--- a/index.html
+++ b/index.html
@@ -136,7 +136,8 @@
                         Soy una persona creativa amante de la tecnología enfocada al servicio a cliente<br>
                         Buscando siempre brindar lo mejor de mi, por eso estoy en constante crecimiento.
                 </p>
-                
+                <a href="https://www.slideshare.net/slideshow/embed_code/key/mqG7Aimq1ToQLm" class="btn btn-primary">ver CV</a>
+
             </div>
         </div> <!-- end about-desc -->
         <div class="row about-stats stats block-1-4 block-m-1-2 block-mob-full" data-aos="fade-up">
